--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${db_url}
 spring.datasource.username=${db_username}
 spring.datasource.password=${db.password}
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=${db.ddl_auto}
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
