--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=${db.ddl_auto}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-logging.file.name=application.log
+#logging.file.name=application.log
 logging.level.com.sarks.testtask=TRACE
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.root=FATAL
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.root=FATAL
